push polar theme

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
-<footer class="footer">
-  <div id="gotop">^</div>
-  <br>
-	@2015 Pithy Theme by Pawpaw.
-</footer>
+<div class="footer" align="center">
+
+  Designed by <a href=http://diezcami.github.io target="_blank">Camille Diez</a><BR />
+  Powered by <a href=http://jekyllrb.com target="_blank">Jekyll</a>
+
+</div>
