--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,68 +1,18 @@
-<header class="header">
-	<div class="header-container">
-		<div class="nav">
-			{% if page.path == "index.html" %}
-			<span class="title">
-				<li>
-					<a href="/index.html">home</a>
-				</li>
-			</span>			
-			{% else %}
-				<li>
-					<a href="/index.html">home</a>
-				</li>			
-			{% endif %}
-			{% if page.path == "archive.html" %}
-			<span class="title">
-				<li>
-					<a href="/archive.html">archive</a>
-				</li>
-			</span>			
-			{% else %}
-				<li>
-					<a href="/archive.html">archive</a>
-				</li>			
-			{% endif %}
-			{% if page.path == "category.html" %}
-			<span class="title">
-				<li>
-					<a href="/category.html">category</a>
-				</li>
-			</span>			
-			{% else %}
-				<li>
-					<a href="/category.html">category</a>
-				</li>			
-			{% endif %}
-			{% if page.path == "about.html" %}
-			<span class="title">
-				<li>
-					<a href="/about">about</a>
-				</li>
-			</span>			
-			{% else %}
-				<li>
-					<a href="/about">about</a>
-				</li>			
-			{% endif %}
-		</div>
-		<div class="description"> {{ site.motto }} </div>		
-		<ul class="social-links">
-			<li>
-				<a href="https://instagram.com/{{ site.instagram_username }}" title="Instagram">
-					<img width="19px" height="19px" src="/images/instagram.png"/>
-				</a>
-			</li>
-			<li>
-				<a href="https://twitter.com/{{ site.twitter_username }}" title="Twitter">
-					<img width="19px" height="19px" src="/images/twitter.png"/>
-				</a>
-			</li>
-			<li>
-				<a href="https://in.linkedi.com/in/{{ site.linkedin_username }}" title="Twitter">
-					<img width="19px" height="19px" src="/images/linkedIn.png"/>
-				</a>
-			</li>
-		</ul>		
-	</div>
-</header>
+<div class="site-header">
+
+    <nav class="site-nav">
+        {% for page in site.pages %}
+          {% if page.title %}
+          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+          {% endif %}
+        {% endfor %}
+    </nav>
+
+    <h1>
+     <span>
+      <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+     </span>
+    </h1>
+
+
+</div>
