--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,200 +1,171 @@
-html,body {
-	-moz-osx-font-smoothing: grayscale;
-}
+/* Site Header
+ * ============================================== */
+    .site-header {
+        min-height: 450px;
+        background-color: $brand-color;
+        background-image: linear-gradient(120deg, #155799, #3fada8);
+        background-size: cover;
+        background-position: center -170px;
+        background-attachment: fixed;
 
-/**
- * Header
- */
-.header {
-    padding: 50px 20px 40px;
-    background-image: linear-gradient(120deg, #155799, #3fada8);
-    background-color: #515865;
-}
+        @include media-query($on-palm) {
+            min-height: 250px;
+            background-position: center -250px;
+        }
+    }
 
-.header-container {
-    max-width: 700px;
-    margin: 0px auto;
-}
+    .site-header a, a h1:hover {color: #FFF};
 
-.nav {
-	color: #707070;
-	text-transform: uppercase;
-    font-size: 16px;
-    font-weight: 600;
-    font-family: "Montserrat",sans-serif;
-    display:inline;
-}
+    .site-header h1 {
+        display: block;
+        font-size: 80px !important;
+        line-height: 80px;
+        letter-spacing: 3px;
+        text-align: center;
+        padding-top: 20px;
+        clear: both;
+        text-transform: uppercase;
+        font-family: 'Open Sans';
 
-.nav li {
-    padding-right: 20px;
-    display: inline-block;
-    line-height: 1;
-}
+        @include media-query($on-palm) {
+            font-size:60px !important;
+            letter-spacing: 0px;
+        }
+    }
 
-li {
-    margin-left: 0px;
-    line-height: 1.7em;
-}
+    .site-header span {
+        border: 10px solid #FFF;
+        padding: 0.3em 0.5em;
+        margin: 10px 20px;
+        display: inline-block;
 
-.nav a {
-    color: #EEE;
-}
+        @include media-query($on-palm) {
+            margin: 10px 10px;
+            padding: 0.15em 0.4em;
+        }
+    }
 
-.nav a:link {
-    opacity: 1;
-    transition: all 0.15s linear 0s;
-    text-decoration: none;
-}
+    .site-nav {
+        float: right;
+        line-height: 56px;
+        margin-right: 25px;
+        padding-bottom: 100px;
 
-.nav li a:visited {
-    opacity: 1;
-    transition: all 0.15s linear 0s;
-    text-decoration: none;
-}
+        .page-link {
+            line-height: $base-line-height;
+            font-weight: bold;
+            letter-spacing: 0.05em;
 
-.nav li a:hover {
-    opacity: 0.6;
-    cursor: pointer;
-    text-decoration: none;
-}
+            &:not(:first-child) {
+                margin-left: 20px;
+            }
+        }
 
-.title li a {
-    color: #FFF;
-}
+        .page-link:hover {
+            opacity: 0.8;
+        }
 
-.title li a:link {
-    color: #FFF;
-}
+        @include media-query($on-palm) {
+            padding-bottom: 10px;
+        }
+    }
 
-.title li a:visited {
-    opacity: 1;
-    transition: all 0.15s linear 0s;
-    text-decoration: none;
-}
+/* Site Footer
+ * ============================================== */
+    .footer {
+        padding-bottom: 3em;
+        margin: auto;
+        font-size: 12px;
+        font-family: Open Sans;
+        color: #959595;
+    }
 
-.title li a:hover {
-    opacity: 1;
-    color: #FFF;
-}
+/* Individual Posts
+ * ============================================== */
+    .page-content {
+        padding: $spacing-unit 0;
+        text-align: justify;
+    }
 
-.description {
-    padding-top: 10px;
-    font-size: 12px;
-    line-height: 1.5em;
-    color: #EEE;
-}
+    .page-heading {
+        font-size: 20px;
+        padding-top: 2px;
+    }
 
-.social-links {
-    padding-top: 10px;
-	margin-left: 0px;
-}
+/* Archive
+ * ============================================== */
+    .post-list {
+        margin-left: 0;
+        list-style: none;
 
-.social-links li {
-    display: inline;
-    padding-right: 10px;
-    line-height: 0;
-}
+        > li {
+            display: block;
+            padding: 0.1em 1.5em;
+        }
 
-.social-links a {
-    color: #959BA6;
-}
+    }
 
-.social-links a:active {
-	opacity: 0.6;
-}
+    .post-link {
+        font-family: 'Open Sans';
+        font-weight: 300;
+        font-size: 1.5em;
+        letter-spacing: -1px;
+        color: #454545;
+        display: block;
+        width: 100%;
 
-.social-links a:hover {
-	opacity: 0.6;
-}
+        @include media-query($on-palm) {
+            font-size: 1.33em;
+        }
+    }
 
-.page-content {
-	min-height: 100%;
-	height: 100%;
-}
+    .post-meta {
+        font-size: $small-font-size;
+        color: $grey-color-light;
+        text-transform: uppercase;
+        display: inline-block;
+    }
 
-.post-meta {
-	color: #666;
-	font-size: 12px;
-	margin-left: 0px;
-}
-.content {
-	margin-top: 20px;
-	color: #666;
-	font-size: 14px;
-}
+/* Post Format
+ * ============================================== */
+    .post-header {
+        margin-bottom: $spacing-unit;
+    }
 
-.post-list {
-	list-style:none;
-}
+    .post-title {
+        font-size: 42px;
+        letter-spacing: -1px;
+        line-height: 1;
 
-.post-list li h3 {
-	margin-bottom: 5px;
-	font-weight: 500px;
-}
+        @include media-query($on-laptop) {
+            font-size: 36px;
+        }
+    }
 
-.post-list li a {
-	color: #000;	
-}
+    .post-content {
+        margin-bottom: $spacing-unit;
+        /*
+        h2 {
+            font-size: 32px;
 
-#line {
-	opacity: 0.1;
-	color: #000;
-}
+            @include media-query($on-laptop) {
+                font-size: 28px;
+            }
+        }
 
-/**
- * Artist
- */
-.well {
-	color: #000;
-	font-family: Monaco,"Courier New",monospace;
-}
+        h3 {
+            font-size: 26px;
 
-.well ul {
-	color: #AAA;
-	font-size: 14px;
-	list-style:none;
-}
+            @include media-query($on-laptop) {
+                font-size: 22px;
+            }
+        }
 
-.well ul a {
-    text-decoration: underline;
-}
+        h4 {
+            font-size: 20px;
 
-.well ul a:hover {
-	color: #000;
-}
-
-/**
- * Category
- */
- .category-box {
-	font-weight:bold;
-	font-size: 16px; 	
- }
-
-
-/**
- * About
- */
-.about {
-	color: #666;	
-}
-
-/**
- * Footer
- */
-.footer {
-    font-size: 11px;
-    text-align: center;
-	color: #666;
-}
-
-#gotop {
-    position: fixed;
-    right: 20px;
-    bottom: 20px;    
-    padding: 10px 15px;    
-    font-size: 20px;
-    background: #515865;
-    color: white;
-    cursor: pointer;
-}
+            @include media-query($on-laptop) {
+                font-size: 18px;
+            }
+        } */
+    }
