fix header structre, add wordpress blogs

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,37 +12,15 @@
 					<a href="/index.html">home</a>
 				</li>			
 			{% endif %}
-			{% if page.path == "archive.html" %}
-			<span class="title">
-				<li>
-					<a href="/archive.html">archive</a>
-				</li>
-			</span>			
-			{% else %}
-				<li>
-					<a href="/archive.html">archive</a>
-				</li>			
-			{% endif %}
 			{% if page.path == "category.html" %}
 			<span class="title">
 				<li>
-					<a href="/category.html">category</a>
+					<a href="/blog">Blog</a>
 				</li>
 			</span>			
 			{% else %}
 				<li>
-					<a href="/category.html">category</a>
-				</li>			
-			{% endif %}
-			{% if page.path == "about.html" %}
-			<span class="title">
-				<li>
-					<a href="/about">about</a>
-				</li>
-			</span>			
-			{% else %}
-				<li>
-					<a href="/about">about</a>
+					<a href="/blog">Blog</a>
 				</li>			
 			{% endif %}
 		</div>
@@ -59,7 +37,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="https://in.linkedi.com/in/{{ site.linkedin_username }}" title="Twitter">
+				<a href="https://in.linkedin.com/in/{{ site.linkedin_username }}" title="Twitter">
 					<img width="19px" height="19px" src="/images/linkedIn.png"/>
 				</a>
 			</li>
