--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,6 +23,11 @@
 					<a href="/blog">Blog</a>
 				</li>			
 			{% endif %}
+				<li>
+					<a href="{{ site.photoblog_link }}">Photoblog</a>
+				</li>
+			
+			
 		</div>
 		<div class="description"> {{ site.motto }} </div>		
 		<ul class="social-links">
