--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html>    
+<html lang="en-us">
+
   {% include head.html %}
 
   <body>
-    {% include header.html %}
-    <br>
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
-    
-    {% include footer.html %}
-    
-  </body>
 
+    {% include sidebar.html %}
+
+    <div class="content container">
+      {{ content }}
+    </div>
+
+  </body>
 </html>
