--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,6 +2,7 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
+        <img src="/public/pp.jpg" alt="Lakshay Pandey"  height="200" width="200"/>
         <a href="{{ site.baseurl }}">
           {{ site.title }}
         </a>
@@ -26,9 +27,11 @@
         {% endif %}
       {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+      <a class="sidebar-nav-item" href="{{ site.blog_url }}">Blog</a>
+      <a class="sidebar-nav-item" href="{{ site.photoblog_url }}">Photoblog</a>
+      <a class="sidebar-nav-item" href="{{ site.contact_url }}">Contact</a>
+      <a class="sidebar-nav-item" href="{{ site.resume_url }}">Resume</a>
+
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
