--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -58,6 +58,7 @@ html {
   padding: 2rem 1rem;
   color: rgba(255,255,255,.5);
   background-color: #202020;
+  background-image: linear-gradient(120deg, #3fada8, #155799);
 }
 @media (min-width: 48em) {
   .sidebar {
@@ -78,6 +79,7 @@ html {
 /* About section */
 .sidebar-about h1 {
   color: #fff;
+  font-weight: normal;
   margin-top: 0;
   font-family: "Abril Fatface", serif;
   font-size: 3.25rem;
