--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,8 +2,10 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
-        <img src="/public/pp.jpg" alt="Lakshay Pandey"  height="200" width="200"/>
-        <a href="{{ site.baseurl }}">
+
+<a href="{{ site.baseurl }}">
+        <img src="/public/pp.jpg" alt="Lakshay Pandey"  height="200" width="200" style="  display: block;margin-left: auto;margin-right: auto" />
+      
           {{ site.title }}
         </a>
       </h1>
