comment blog link - fix description

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,7 +29,7 @@
         {% endif %}
       {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.blog_url }}">Blog</a>
+      <!--<a class="sidebar-nav-item" href="{{ site.blog_url }}">Blog</a> -->
       <a class="sidebar-nav-item" href="{{ site.photoblog_url }}">Photoblog</a>
       <a class="sidebar-nav-item" href="{{ site.contact_url }}">Contact</a>
       <a class="sidebar-nav-item" href="{{ site.resume_url }}">Resume</a>
