--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
       <h1>
 
 <a href="{{ site.baseurl }}">
-        <img src="/public/pp2.jpg" alt="Lakshay Pandey"  height="150" width="105" style="  display: block;margin-left: auto;margin-right: auto;margin-top : 100px" />
+        <img src="/public/pp2.jpg" alt="Lakshay Pandey"  height="235" width="164" style="  display: block;margin-left: auto;margin-right: auto;" />
 
           {{ site.title }}
         </a>
