--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -63,6 +63,7 @@ html {
 @media (min-width: 48em) {
   .sidebar {
     position: fixed;
+    overflow:auto;
     top: 0;
     left: 0;
     bottom: 0;
@@ -81,8 +82,16 @@ html {
   color: #fff;
   font-weight: normal;
   margin-top: 0;
-  font-family: "Abril Fatface", serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 3.25rem;
+
+
+  /*line-height: 26.4px;
+  font-variant: small-caps;*/
+
+
+
+
 }
 
 /* Sidebar nav */
@@ -109,7 +118,8 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 48em) {
   .sidebar-sticky {
-    position: absolute;
+    /*position: absolute;*/
+    overflow: auto;
     right:  1rem;
     bottom: 1rem;
     left:   1rem;
